Revision history for Dist::Zilla::PluginBundle::YANICK

{{$NEXT}}

0.2.0     2011-04-10
    [API CHANGES]

    [ENHANCEMENTS]
    - Add the NextSemanticVersion plugin
    - Add ReadmeMarkdownFromPod
    - Add parameter 'fake_release'

    [BUG FIXES]

0.1.0     2011-01-02
    - Add parameter 'autoprereqs_skip'.
    - Add plugin InstallRelease
    - Add plugin Authority

0.0.1     2010-12-21
    - First release on an unsuspecting world.
