@@ -8,4 +8,5 @@ copyright_year   = 2010
 Dist::Zilla::Plugin::ReadmeMarkdownFromPod = 0
 
 [@YANICK]
+fake_release=1
 
