@@ -143,7 +143,7 @@ sub configure {
           TestRelease
           ConfirmRelease
           Git::Check
-          Git::Commit /,
+          /,
         [ 'Git::CommitBuild' => { release_branch => $release_branch } ],
         [ 'Git::Tag'  => { tag_format => 'v%v', branch => $release_branch } ],
     );
@@ -160,9 +160,10 @@ sub configure {
         );
     }
 
-    $self->add_plugins(
-        'Author::YANICK::NextSemanticVersion',
-    );
+    $self->add_plugins(qw/
+        Author::YANICK::NextSemanticVersion
+        Git::Commit 
+    /);
 
     $self->config_slice( 'mb_class' );
 
